# vesper-libs

./: .gitignore  CMakeLists.txt  CODING_STYLE.md  Doxyfile.in  LICENSE  README.md
vesper_cmcp/: CMakeLists.txt  vsp_cmcp.h  vsp_cmcp_client.c  vsp_cmcp_client.h  vsp_cmcp_datalist.c  vsp_cmcp_datalist.h  vsp_cmcp_message.c  vsp_cmcp_message.h  vsp_cmcp_server.c  vsp_cmcp_server.h  vsp_connector.c  vsp_network_connector.c
vesper_console/: Console.cpp
vesper_error/: CMakeLists.txt  vsp_error.c  vsp_error.h
vesper_log/: CMakeLists.txt  Console.hpp  Logging.cpp  Logging.h  Logging.hpp  LoggingType.h  LoggingType.hpp  LoggingTypes.hpp  Vout.cpp  Vout.h  Vout.hpp
vesper_sphtp/: CMakeLists.txt  network_connector.c  network_connector.h  sphtp.h  vsp_network_connector.c  vsp_network_connector.h  vsp_sphtp.h
vesper_test/: CMakeLists.txt  README.md  TestVesperLog.cpp  minunit.c  minunit.h  vsp_test.c  vsp_test.h  vsp_test_cmcp_connection.c  vsp_test_cmcp_datalist.c  vsp_test_cmcp_message.c
vesper_util/: CMakeLists.txt  vsp_api.h  vsp_error.c  vsp_error.h  vsp_util.h
